bppackaging/src/objects/Filter__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Field_Json__c</fullName>
        <label>Additional Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommonFilterCategory__c</fullName>
        <label>CommonFilterCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Common__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Hidden_Column__c</fullName>
        <label>Display Hidden Column</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Field_Json__c</fullName>
        <label>Export Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_File_Format__c</fullName>
        <label>Export File Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_GroupBy_Field__c</fullName>
        <label>Export Group By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Filter_JSON_Hash_Code__c</fullName>
        <label>Field Filter JSON Hash Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Filter_Json__c</fullName>
        <label>Field Filter Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_JSON__c</fullName>
        <label>Filter JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Label__c</fullName>
        <label>Filter Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Filter__c</fullName>
        <label>Last Modified Date Filter</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Json__c</fullName>
        <label>Sort Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Field_Json__c</fullName>
        <label>Summary Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To set item to favorite item</description>
        <label>favorite</label>
        <type>Checkbox</type>
    </fields>
    <label>Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Custom__c</columns>
        <columns>Filter_JSON__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Common__c</columns>
        <columns>CommonFilterCategory__c</columns>
        <columns>favorite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ashish</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>favorite__c</columns>
        <columns>Filter_User__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Ashish Garg</value>
        </filters>
        <label>Ashish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bhawna</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Additional_Field_Json__c</columns>
        <columns>Common__c</columns>
        <columns>CommonFilterCategory__c</columns>
        <columns>Custom__c</columns>
        <columns>Display_Hidden_Column__c</columns>
        <columns>Export_Field_Json__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>contains</operation>
            <value>Bhawna</value>
        </filters>
        <label>Bhawna</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Common</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>favorite__c</columns>
        <columns>Filter_User__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Common__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Common</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tarun</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>favorite__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Tarun Khandelwal</value>
        </filters>
        <label>Tarun</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>